# flograph

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ideas.md  ideas_archived.md  issues.md  jinja_report.flograph  main.py  pyproject.toml  stress_test_canvas_perf.flograph
.github/workflows/: test.yml
.opencode/skills/flograph/: SKILL.md
.opencode/skills/new-node/: SKILL.md
scripts/: build_onefile.py  flopy_to_flograph.py
src/flograph/: __main__.py  ai.py  app.py  packages.py  paths.py
src/flograph/core/: __init__.py  datatypes.py  events.py  graph.py  links.py  node.py  params.py  ports.py  registry.py  script.py  serialization.py  spec.py  user_nodes.py
src/flograph/engine/: __init__.py  cache.py  cache_persistence.py  cache_worker.py  context.py  errors.py  headless.py  introspect.py  scheduler.py  worker.py
src/flograph/templates/: 01_load_filter_visualize.flograph  02_aggregate_dashboard.flograph  03_custom_script_chart.flograph  04_join_groupby_compare.flograph  05_interactive_slicer_dashboard.flograph  06_script_pipeline_frame.flograph  07_retail_ops_command_center.flograph  08_geo_population_map.flograph  09_folium_map.flograph  __init__.py
src/flograph/ui/: ai_settings_dialog.py  commands.py  mainwindow.py  packages_dialog.py  resource_monitor.py  settings_dialog.py  slicer_list.py  theme.py
src/flopy/: app.py  packages.py  paths.py
src/flopy/core/: __init__.py  datatypes.py  events.py  graph.py  node.py  params.py  registry.py  serialization.py  spec.py  user_nodes.py
src/flopy/engine/: __init__.py  cache.py  errors.py  (+5 more)
tests/: conftest.py  test_about_settings.py  test_action_button_node.py  test_ai.py  test_ai_settings_dialog.py  test_cache_persistence.py  test_canvas_polish.py  test_column_suggestions.py  test_commands.py  test_dashboard_ui.py  test_datatypes.py  test_engine.py  test_file_drop.py  test_goto_links.py  test_goto_links_ui.py  test_gpu_viewport_setting.py  test_graph.py  test_graph_pages.py  test_grid_snap.py  test_inspector.py  test_lod_settings.py  test_migration_converter.py  test_minimap_settings.py  test_no_qt_in_core.py  test_node_color_muting.py  test_note_node.py  test_onefile.py  test_packages.py  test_page_bar_position.py  test_page_color.py  test_page_commands.py  test_page_reorder.py  test_password_param.py  test_plotly_node.py  test_project_lifecycle.py  test_registry.py  test_reset_defaults.py  test_resource_monitor.py  test_script.py  test_serialization.py  (+17 more)
(+140 files in other folders)
