[project]
name = "flograph"
version = "0.1.0"
description = "Visual node-based Python programming environment (KNIME-style dataflow, Blueprint-style canvas)"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "jedi>=0.19",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-qt>=4.4"]
excel = ["openpyxl"]
parquet = ["pyarrow"]
plotly = ["plotly"]

[project.scripts]
flograph = "flograph.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flograph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
